Updated to use Long.valueOf()